# detect-v4l

./: README.md  pyproject.toml  setup.py
src/detect_v4l/: __init__.py  detector.py  utils.py
tests/: test_detector.py
