[project]
name = "detect-v4l"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Abhijit Kadalli", email = "abhijitkadalli@nitgoa.ac.in" }
]
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.3.5",
    "setuptools>=77.0.3",
    "twine>=6.1.0",
    "wheel>=0.45.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
